  otherwise, infeasible solution could be accepted as feasible
- fixed bug in sepa_rapidlearning.c, corrected computation of right dualbound
- fixed bug in lp.c: in sumMIRRow() rowtoolong was not set correctly 
- fixed bugs in sepa_zerohalf.c, e.g., handling of intscaling and substitution of variable bounds  

plugins:
- added constraint handler for second order cone constraints (cons_soc.(c|h))
- added packing/partitioning orbitope constraint handler for symmetry handling (cons_orbitope.<c/h>)
- added heuristic zirounding (heur_zirounding.{c,h})
- new separator rapid learning (sepa_rapidlearning.{c,h]) that produces conflicts, global bound changes, primal solutions and initializes inference values for branching
- added propagator for variable lower and upper bounds (prop_vbound.{c,h}); adjusted cons_varbound.c, var.c, and, implics.c to work correctly with the new propagator

parameters: 
- added parameter <misc/usesmalltables> which results in using smaller tables for names, cliques and cuts and improves the
  performace for smaller instances, default value FALSE 
- added parameter <misc/usevartable> and <misc/useconstable> which turns on/off the usage of hashtables mapping from 
  variable/constraint names to the variables/constraints; when turned off, SCIPfindVar() and SCIPfindCons() may not be used; 
  the hashtables can be turned off for subMIPs to improve the performance, default value TRUE
- removed parameter constraints/knapsack/maxnumcardlift and adapted setting files
- added parameter <reading/zplreader/usestartsol> which allows to switch ZIMPL start solutions off, default value TRUE
- added parameter <lp/simplexrowrep> telling simplex solver to use row representation of the basis (if possible), default value FALSE
- added parameter <heuristics/crossover/dontwaitatroot> that allows to call crossover at root node independently from nwaitingnodes